--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
 
-    <title>Paint NFT</title>
+    <title>Phishing Detector</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
